--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -29,3 +29,11 @@ body {
     color: aquamarine;
     font-size: 16px;
 }
+
+/* FOOTER */
+
+.footer--copyright {
+    color: gray;
+    font-size: 21px;
+    text-align: right;
+}
